versions/v2.0.10/docs/TEXT_INDEX.md
# 文本索引

| 键前缀 | 显示用途 | 文件 |
|---|---|---|
| `rse_route.*` | 路线事件 | `localisation/simp_chinese/rse_l_simp_chinese.yml` |
| `citizenship_rse_*`、`living_standard_rse_*` | 有机物种权利 | 同上 |
| `trait_rse_*` | 物种特质 | 同上 |
| `job_rse_*`、`rse_*service*`、`rse_*recorder*` | 岗位与说明 | 同上 |
| `tech_rse_*` | 科技链 | 同上 |
| `building_rse_*`、`ring_rse_*` | 行星、穹顶与星环建筑 | 同上 |
| `policy_rse_*`、`rse_growth_*` | 生产、活动范围与增长政策 | 同上 |
| `decision_rse_*` | 行星决议 | 同上及领袖文本文件 |
| `tradition_rse_*`、`tr_rse_*` | 传统树 | 同上 |
| `ap_rse_*`、`pc_rse_*` | 飞升与理想乐园 | 同上 |
| `leader_trait_rse_*` | V2 领袖特质 | `localisation/simp_chinese/rse_leader_l_simp_chinese.yml` |
| `rse_proto.200/201/241` | 包围事件及白色领袖完成事件 | 同上 |
| `rse_portable_space_utilization`、`edict_rse_portable_space_utilization` | 随身空间法令及4.4法令页面别名 | 同上 |
| `edict_rse_growth_plan_reorganization_act`、`edict_rse_recruit_trophy_leader` | 活體陳設计划调整与领袖招募法令页面文本 | `localisation/simp_chinese/rse_l_simp_chinese.yml` |
| `pop_cat_rse_servitor*` | 独立“侍奉者”人口阶层名称、复数与说明 | `localisation/simp_chinese/rse_l_simp_chinese.yml` |
| `pop_cat_rse_servitor.dds` | “侍奉者”人口阶层30×30自定义图标 | `gfx/interface/icons/pop_categories/pop_cat_rse_servitor.dds` |

正式版不包含 prototype 测试控制台、监管地或战争原型文本。
